# raspberry-pi-intercom

./: .gitignore  CMakeLists.txt  README.md  audio.cpp  audio.h  config-client.cfg  config-server.cfg  config.cpp  config.h  doorbell.cpp  doorbell.h  dooropen.cpp  dooropen.h  http.cpp  http.h  httpconnection.cpp  httpconnection.h  httprequest.cpp  httprequest.h  httpserver.cpp  httpserver.h  index.html  io.cpp  io.h  main.cpp  main.h  pjsua  pjsua-server.conf  pushsafer.cpp  pushsafer.h  requesthandler.cpp  requesthandler.h  ring.cpp  ring.h  rpi-intercom.service  server.cfg  udp.cpp  udp.h  udplisten.cpp  udplisten.h  (+1 more)
3d-print/: back.scad  client-back.scad  client-front.scad  client-intercom.scad  front.scad  intercom.scad  variables.scad
src/: audio.cpp  audio.h  config.cpp  config.h  http.cpp  http.h  httpserver.cpp  httpserver.h  io.cpp  io.h  main.cpp  main.h  pushsafer.cpp  pushsafer.h  ring.cpp  ring.h  sessions.cpp  sessions.h  udp.cpp  udp.h
ssl/: generate.sh
www/: application.js  index.html  style.css  test.html  test.js
